# ip_ltx

./: .gitignore  LICENSE  README.md  TODO.txt  pyproject.toml  setup.bat
src/ip_ltx/: __init__.py  analyzer_compare.py  analyzer_general.py  analyzer_loot.py  analyzer_spawn.py  db.py  generator_character_desc.py  generator_export.py  generator_task_manager.py  generator_test_db.py  generator_treasure_manager.py  ini.py  ip_ltx.py  level.py  meta_inspector.py  spawn.py  spawn_entries_collector.py  spawn_inspector.py  string_table.py  task_manager.py  trade.py  treasure_manager.py  treasure_manager_ext.py  utils.py  utils_meta.py
tests/: base_SoC.ltx  conftest.py  meta-vanilla.ltx  test_01_Section.py  test_02_Ini.py  test_03_preinit.py  test_04_analyzer_general.py  test_04_meta.py  test_05_generator_character_desc.py  test_07_analyzer_loot.py  test_07_analyzer_spawn.py  test_08_generator_export.py
tests/test_04_analyzer_general/: analyzer_general__INV__class.txt  analyzer_general__INV__visual.txt  analyzer_general__all__class.txt  analyzer_general__all__cost.txt  analyzer_general__ammo.txt  analyzer_general__ammo__k_hit.txt  analyzer_general__ammo__to_wpn.txt  analyzer_general__anomaly.txt  analyzer_general__arts.txt  analyzer_general__mutant_parts.txt  (+5 more)
usage/: analyzer_compare.py  analyzer_compare.sh  analyzer_general.py  analyzer_general.sh  analyzer_spawn.py  analyzer_spawn.sh  generator_export.py  generator_task_manager.py  generator_task_manager.sh  generator_test_db.py  generator_test_db.sh  generator_treasure_manager.py  generator_treasure_manager.sh
(+266 files in other folders)
